project-2/examples/good/10-01-division-by-zero.lg
int main() {
    print(5 / 0); // runtime error
    
    return 0;
}
