project-2/examples/bad/no_return.lg
int f() {
    // no return
} // compile error

int main() {
    print(f());
    
    return 0;
}
